--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1550,20 +1550,20 @@
       "80\n",
       "\n",
       " Searches: 1. True 2. True 3. False \n",
-      "Generated Dataset: ['M', 'R', 'I', 'O', 'U', 'F', 'V', 'G', 'L', 'Q', 'A', 'H', 'N']\n",
+      "Generated Dataset: ['J', 'W', 'E', 'D', 'N', 'Y', 'L', 'A', 'V', 'H', 'U', 'P', 'M']\n",
       "A\n",
-      "F\n",
-      "G\n",
+      "D\n",
+      "E\n",
       "H\n",
-      "I\n",
+      "J\n",
       "L\n",
       "M\n",
       "N\n",
-      "O\n",
-      "Q\n",
-      "R\n",
+      "P\n",
       "U\n",
       "V\n",
+      "W\n",
+      "Y\n",
       "Node to be deleted not found in the tree!\n",
       "After Removal:\n",
       "-7\n",
@@ -1593,58 +1593,7 @@
     "class binary_search_tree:\n",
     "\tdef __init__(self):\n",
     "\t\tself.root=None\n",
-    "\n",
-    "\t# Generates a string representation of the AVL Tree, displaying the structure of the tree with each node's value and height.\n",
-    "\tdef __repr__(self):\n",
-    "\t\tif self.root==None: return ''\n",
-    "\t\tcontent='\\n' # to hold final string\n",
-    "\t\tcur_nodes=[self.root] # all nodes at current level\n",
-    "\t\tcur_height=self.root.height # height of nodes at current level\n",
-    "\t\tsep=' '*(2**(cur_height-1)) # variable sized separator between elements\n",
-    "\t\twhile True:\n",
-    "\t\t\tcur_height+=-1 # decrement current height\n",
-    "\t\t\tif len(cur_nodes)==0: break\n",
-    "\t\t\tcur_row=' '\n",
-    "\t\t\tnext_row=''\n",
-    "\t\t\tnext_nodes=[]\n",
-    "\n",
-    "\t\t\tif all(n is None for n in cur_nodes):\n",
-    "\t\t\t\tbreak\n",
-    "\n",
-    "\t\t\tfor n in cur_nodes:\n",
-    "\n",
-    "\t\t\t\tif n==None:\n",
-    "\t\t\t\t\tcur_row+='   '+sep\n",
-    "\t\t\t\t\tnext_row+='   '+sep\n",
-    "\t\t\t\t\tnext_nodes.extend([None,None])\n",
-    "\t\t\t\t\tcontinue\n",
-    "\n",
-    "\t\t\t\tif n.value!=None:       \n",
-    "\t\t\t\t\tbuf=' '*int((5-len(str(n.value)))/2)\n",
-    "\t\t\t\t\tcur_row+='%s%s%s'%(buf,str(n.value),buf)+sep\n",
-    "\t\t\t\telse:\n",
-    "\t\t\t\t\tcur_row+=' '*5+sep\n",
-    "\n",
-    "\t\t\t\tif n.left_child!=None:  \n",
-    "\t\t\t\t\tnext_nodes.append(n.left_child)\n",
-    "\t\t\t\t\tnext_row+=' /'+sep\n",
-    "\t\t\t\telse:\n",
-    "\t\t\t\t\tnext_row+='  '+sep\n",
-    "\t\t\t\t\tnext_nodes.append(None)\n",
-    "\n",
-    "\t\t\t\tif n.right_child!=None: \n",
-    "\t\t\t\t\tnext_nodes.append(n.right_child)\n",
-    "\t\t\t\t\tnext_row+='\\ '+sep\n",
-    "\t\t\t\telse:\n",
-    "\t\t\t\t\tnext_row+='  '+sep\n",
-    "\t\t\t\t\tnext_nodes.append(None)\n",
-    "\n",
-    "\t\t\tcontent+=(cur_height*'   '+cur_row+'\\n'+cur_height*'   '+next_row+'\\n')\n",
-    "\t\t\tcur_nodes=next_nodes\n",
-    "\t\t\tsep=' '*int(len(sep)/2) # cut separator size in half\n",
-    "\t\treturn content\n",
-    "\n",
-    "\n",
+    "\t\n",
     "\t'''\n",
     "\tInserting method with a public method which includes underscore private method\n",
     "\tIt checks if root is null, if so puts the value as a root and if there is one\n",
@@ -1955,6 +1904,8 @@
    ],
    "source": [
     "# AVL treeeeeee\n",
+    "# I found BST not really useful so i wanted to make\n",
+    "# self balancing tree.\n",
     "import random\n",
     "class node:\n",
     "\tdef __init__(self,value=None):\n",
@@ -2390,26 +2341,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "BFS: Target node I found: True\n",
+      "DFS: Target node I found: True\n"
+     ]
+    }
+   ],
    "source": [
-    "def count_nodes(node):\n",
-    "    if node is None:\n",
-    "        return 0\n",
-    "    return 1 + count_nodes(node.left_child) + count_nodes(node.right_child)\n",
+    "class TreeNode:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.children = []\n",
     "\n",
-    "def is_symmetrical(node):\n",
-    "    if node is None:\n",
-    "        return True\n",
+    "class Tree:\n",
+    "    def __init__(self, root):\n",
+    "        self.root = root\n",
     "\n",
-    "    left_count = count_nodes(node.left_child)\n",
-    "    right_count = count_nodes(node.right_child)\n",
+    "    def insert(self, parent_value, child_value):\n",
+    "        parent_node = self.find_node(self.root, parent_value)\n",
+    "        if parent_node:\n",
+    "            child_node = TreeNode(child_value)\n",
+    "            parent_node.children.append(child_node)\n",
+    "        else:\n",
+    "            print(f\"Parent node with value {parent_value} not found.\")\n",
     "\n",
-    "    if left_count != right_count:\n",
-    "        return False\n",
+    "    def find_node(self, node, target_value):\n",
+    "        if node.value == target_value:\n",
+    "            return node\n",
+    "        for child in node.children:\n",
+    "            result = self.find_node(child, target_value)\n",
+    "            if result:\n",
+    "                return result\n",
+    "        return None\n",
     "\n",
-    "    return is_symmetrical(node.left_child) and is_symmetrical(node.right_child)\n"
+    "def bfs(tree, target_value):\n",
+    "    queue = []\n",
+    "    visited = set()\n",
+    "\n",
+    "    queue.append(tree.root)\n",
+    "\n",
+    "    while queue:\n",
+    "        current_node = queue.pop(0)\n",
+    "\n",
+    "        if current_node.value == target_value:\n",
+    "            return True\n",
+    "\n",
+    "        visited.add(current_node)\n",
+    "        for child in current_node.children:\n",
+    "            if child not in visited:\n",
+    "                queue.append(child)\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "def dfs(tree, target_value):\n",
+    "    stack = []\n",
+    "    visited = set()\n",
+    "\n",
+    "    stack.append(tree.root)\n",
+    "\n",
+    "    while stack:\n",
+    "        current_node = stack.pop()\n",
+    "\n",
+    "        if current_node.value == target_value:\n",
+    "            return True\n",
+    "\n",
+    "        visited.add(current_node)\n",
+    "        for child in current_node.children:\n",
+    "            if child not in visited:\n",
+    "                stack.append(child)\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "root_node = TreeNode('A')\n",
+    "tree = Tree(root_node)\n",
+    "\n",
+    "# Inserting nodes\n",
+    "tree.insert('A', 'B')\n",
+    "tree.insert('A', 'C')\n",
+    "tree.insert('B', 'D')\n",
+    "tree.insert('B', 'E')\n",
+    "tree.insert('C', 'F')\n",
+    "tree.insert('C', 'G')\n",
+    "tree.insert('D', 'H')\n",
+    "tree.insert('D', 'I')\n",
+    "\n",
+    "\n",
+    "# BFS\n",
+    "target_node_value_bfs = 'I'\n",
+    "print(f\"\\nBFS: Target node {target_node_value_bfs} found: {bfs(tree, target_node_value_bfs)}\")\n",
+    "\n",
+    "# DFS\n",
+    "target_node_value_dfs = 'I'\n",
+    "print(f\"DFS: Target node {target_node_value_dfs} found: {dfs(tree, target_node_value_dfs)}\")\n"
    ]
   },
   {
